add projects + react-native mod

--- a/my_second_app/android/app/build.gradle
+++ b/my_second_app/android/app/build.gradle
@@ -180,8 +180,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.facebook.react:react-native:+"  // From node_modules
-
+    implementation "com.facebook.react:react-native:0.61.5"  // From node_modules
+    implementation "com.android.support:appcompat-v7:24.2.1"
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
