--- a/my_first_app/android/build.gradle
+++ b/my_first_app/android/build.gradle
@@ -9,9 +9,6 @@ buildscript {
     }
     repositories {
         google()
-        maven {
-            url "https://dl/google.com/dl/android/maven2"
-        }
         jcenter()
     }
     dependencies {
@@ -26,7 +23,7 @@ allprojects {
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
         }
         maven {
             // Android JSC is installed from npm
