--- a/my_first_app/package.json
+++ b/my_first_app/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-cli": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.20.2",
@@ -20,7 +21,7 @@
     "babel-jest": "24.9.0",
     "eslint": "6.8.0",
     "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.4",
+    "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
